<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

            <ListView
                android:id="@+id/epithetsList"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

            </ListView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview2" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:visibility="visible"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/textview3" />

            <RadioGroup
                android:id="@+id/radios"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selection">

                <RadioButton
                    android:id="@+id/kotlin"
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kotlin" />

                <RadioButton
                    android:id="@+id/java"
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:text="@string/java" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UseUpperCase" />

            <Button
                android:id="@+id/button"
                style="@style/myStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:textColor="#7CB342" />

            <TextView
                android:id="@+id/selection"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:text="@string/textview4"

                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Добавить элемент" />

            <EditText
                android:id="@+id/newvalue"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="Значение" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Удалить элемент" />

            <EditText
                android:id="@+id/delvalue"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="id" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="изменить элемент" />

            <EditText
                android:id="@+id/editid"
                android:layout_width="165dp"
                android:layout_height="57dp"
                android:text="id" />

            <EditText
                android:id="@+id/editvalue"
                android:layout_width="169dp"
                android:layout_height="57dp"
                android:text="Значение" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
